demo/00-peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: strict-mutual-tls
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
