demo/02-transponder-server-external.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: transponder-server
spec:
  gateways:
    - "istio-system/transponder-server"
  hosts:
    - "*"
  http:
    - match:
        - port: 8081
      route:
        - destination:
            host: transponder-server
            port:
              number: 8081
    - match:
        - port: 8080
      route:
        - destination:
            host: transponder-server
            port:
              number: 8080
  tls:
    - match:
        - port: 8443
          sniHosts:
            - "*"
      route:
        - destination:
            host: transponder-server
            port:
              number: 8443
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: transponder-server
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - hosts:
        - "*"
      port:
        name: http-transponder-server
        number: 8080
        protocol: HTTP
    - hosts:
        - "*"
      port:
        name: grpc-transponder-server
        number: 8081
        protocol: GRPC
    - hosts:
        - "*"
      port:
        name: https-transponder-server
        number: 8443
        protocol: HTTPS
      tls:
        mode: PASSTHROUGH
