demo/04-envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: istio-multicluster-transponder-demo-2-ingressgateway
  namespace: istio-system
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.sni_cluster
        portNumber: 15443
    patch:
      operation: INSERT_AFTER
      value:
        config:
          cluster_pattern: \.transponder-demo-2.global$
          cluster_replacement: .svc.cluster.local
        name: envoy.filters.network.tcp_cluster_rewrite
  workloadSelector:
    labels:
      istio: ingressgateway
