demo/04-transponder-server-multi-cluster-dns.template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: transponder-server-transponder-demo-2
spec:
  hosts:
    - transponder-server.default.transponder-demo-2.global
  location: MESH_INTERNAL
  ports:
    - name: http
      number: 8080
      protocol: http
    - name: grpc
      number: 8081
      protocol: grpc
    - name: https
      number: 8443
      protocol: https
  resolution: DNS
  addresses:
    - 240.0.0.3
  endpoints:
    - address: ingress_gateway_ip
      ports:
        http: 15443
        grpc: 15443
        https: 15443
